--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.qtc.getloan">
+    package="com.qtc.getloan" >
+
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission
+        android:name="android.permission.MANAGE_EXTERNAL_STORAGE"
+        tools:ignore="ScopedStorage" />
 
     <application
         android:allowBackup="true"
@@ -9,10 +15,26 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.GetLoan"
-        tools:targetApi="31">
+        tools:targetApi="31" >
+        <activity
+            android:name=".LoanStep4"
+            android:exported="false" />
+        <activity
+            android:name=".LoanStep3"
+            android:exported="false" />
+        <activity
+            android:name=".LoanStep2"
+            android:exported="false" />
+        <activity
+            android:name=".LoanStep1"
+            android:exported="false" />
+        <activity
+            android:name=".Categories"
+            android:exported="false" />
         <activity
             android:name=".FinalPage"
             android:exported="false" />
@@ -25,7 +47,7 @@
             android:label="@string/tit_activity_2" />
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
