--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,9 @@
         android:theme="@style/Theme.GetLoan"
         tools:targetApi="31">
         <activity
+            android:name=".AboutPage"
+            android:exported="false" />
+        <activity
             android:name=".TermCondition"
             android:exported="false" />
         <activity
@@ -49,9 +52,6 @@
             android:exported="false" />
         <activity
             android:name=".FinalPage"
-            android:exported="false" />
-        <activity
-            android:name=".AdsActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity2"
